#593: #651: #564: #439: fixed bugs, refactored tool dependencies