@@ -7,6 +7,7 @@ import java.util.Set;
 
 import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
+import com.devonfw.tools.ide.process.EnvironmentContext;
 import com.devonfw.tools.ide.repo.ToolRepository;
 import com.devonfw.tools.ide.tool.GlobalToolCommandlet;
 import com.devonfw.tools.ide.tool.PackageManager;
@@ -25,17 +26,16 @@ public class PgAdmin extends GlobalToolCommandlet {
    */
   public PgAdmin(IdeContext context) {
 
-    //TODO: add relevant Tag.
-    super(context, "pgadmin", Set.of(Tag.DB));
+    super(context, "pgadmin", Set.of(Tag.DB, Tag.ADMIN));
   }
 
   @Override
-  protected boolean doInstall(boolean silent) {
+  public boolean install(boolean silent, EnvironmentContext environmentContext) {
 
     if (this.context.getSystemInfo().isLinux()) {
       return runWithPackageManager(silent, getPackageManagerCommandsInstall());
     } else {
-      return super.doInstall(silent);
+      return super.install(silent, environmentContext);
     }
   }
 
@@ -46,18 +46,15 @@ public class PgAdmin extends GlobalToolCommandlet {
     VersionIdentifier configuredVersion = getConfiguredVersion();
     String resolvedVersion = toolRepository.resolveVersion(this.tool, edition, configuredVersion).toString();
 
-    List<PackageManagerCommand> pmCommands = new ArrayList<>();
-
-    pmCommands.add(new PackageManagerCommand(PackageManager.APT, Arrays.asList(
+    PackageManagerCommand packageManagerCommand = new PackageManagerCommand(PackageManager.APT, List.of(
         "curl -fsS https://www.pgadmin.org/static/packages_pgadmin_org.pub | "
             + "sudo gpg --yes --dearmor -o /usr/share/keyrings/packages-pgadmin-org.gpg",
         "sudo sh -c 'echo \"deb [signed-by=/usr/share/keyrings/packages-pgadmin-org.gpg] "
             + "https://ftp.postgresql.org/pub/pgadmin/pgadmin4/apt/$(lsb_release -cs) pgadmin4 main\" "
             + "> /etc/apt/sources.list.d/pgadmin4.list && apt update'", String.format(
             "sudo apt install -y --allow-downgrades pgadmin4=%1$s pgadmin4-server=%1$s pgadmin4-desktop=%1$s pgadmin4-web=%1$s",
-            resolvedVersion))));
-
-    return pmCommands;
+            resolvedVersion)));
+    return List.of(packageManagerCommand);
   }
 
   @Override
